<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lytSelectGenreForAdvice"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_grey_500"
    android:orientation="vertical"
    tools:context="com.example.koray.capstoneproject.tabfragment.SelectGenreForAdvice">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="500dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgButtonFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/facebookimage_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber_800"
                    android:text="Facebook"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="500dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgButtonAction"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/actionimage_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber_800"
                    android:text="@string/action"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="500dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgButtonAdventure"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/adventureimage_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber_800"
                    android:text="@string/adventure"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="500dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgButtonCrime"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/crimeimage_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber_800"
                    android:text="@string/crime"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_marginTop="10dp"
                android:layout_width="500dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/imgButtonComedy"
                    android:scaleType="centerCrop"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:background="@null"
                    android:src="@drawable/comedyimage_btn" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/amber_800"
                    android:text="Comedy"
                    android:textColor="@color/white"
                    android:textSize="35sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>